--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:45:00 GMT -->
 <head>
 	<meta charset="UTF-8">
-	<title>Baitun - Real Estate Mobile Template</title>
+	<title>ApinamDubai</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -55,15 +54,15 @@
 				<div class="collapsible-header"><i class="fa fa-th-large"></i>Categories <span><i class="fa fa-caret-down"></i></span></div>
 				<div class="collapsible-body">
 					<ul class="side-nav-panel">
-						<li><a href="#">Ads</a></li>
-						<li><a href="#">Restaurant</a></li>
-						<li><a href="#">Cargo</a></li>
-						<li><a href="#">Salon</a></li>
-						<li><a href="#">Grocery</a></li>
-						<li><a href="#">Medical</a></li>
-						<li><a href="#">Jobs</a></li>
-						<li><a href="#">Properties</a></li>
-						<li><a href="#">More</a></li>
+						<li><a href="ads-list.html">Ads</a></li>
+						<li><a href="restaurant-list.html">Restaurant</a></li>
+						<li><a href="cargo-list.html">Cargo</a></li>
+						<li><a href="salon-list.html">Salon</a></li>
+						<li><a href="grocery-list.html">Grocery</a></li>
+						<li><a href="medical-list.html">Medical</a></li>
+						<li><a href="jobs-list.html">Jobs</a></li>
+						<li><a href="property-list.html">Properties</a></li>
+						<li><a href="more-list.html">More</a></li>
 					</ul>
 				</div>
 			</li>
@@ -122,15 +121,15 @@
 		</div>
 		<nav class="category-medical">
 			<ul>
-				<li><a href="#"><img src="img/icon/form.svg" alt="" title="" /><span>Ads</span></a></li>
-				<li><a href="#"><img src="img/icon/food.svg" alt="" title="" /><span>Restaurant</span></a></li>
-				<li><a href="#"><img src="img/icon/cargo.svg" alt="" title="" /><span>Cargo</span></a></li>
-				<li><a href="#"><img src="img/icon/salon.svg" alt="" title="" /><span>Salon</span></a></li>
-				<li><a href="#"><img src="img/icon/grocery.svg" alt="" title="" /><span>Grocery</span></a></li>
-				<li><a href="#"><img src="img/icon/medic.svg" alt="" title="" /><span>Medical</span></a></li>
-				<li><a href="#"><img src="img/icon/job.svg" alt="" title="" /><span>Jobs</span></a></li>
-				<li><a href="#"><img src="img/icon/property.svg" alt="" title="" /><span>Properties</span></a></li>
-				<li><a href="#"><br><img src="img/icon/more.svg" alt="" title="" /><span>More</span></a></li>
+				<li><a href="ads-list.html"><img src="img/icon/form.svg" alt="" title="" /><span>Ads</span></a></li>
+				<li><a href="restaurant-list.html"><img src="img/icon/food.svg" alt="" title="" /><span>Restaurant</span></a></li>
+				<li><a href="cargo-list.html"><img src="img/icon/cargo.svg" alt="" title="" /><span>Cargo</span></a></li>
+				<li><a href="salon-list.html"><img src="img/icon/salon.svg" alt="" title="" /><span>Salon</span></a></li>
+				<li><a href="grocery-list.html"><img src="img/icon/grocery.svg" alt="" title="" /><span>Grocery</span></a></li>
+				<li><a href="medical-list.html"><img src="img/icon/medic.svg" alt="" title="" /><span>Medical</span></a></li>
+				<li><a href="jobs-list.html"><img src="img/icon/job.svg" alt="" title="" /><span>Jobs</span></a></li>
+				<li><a href="property-list.html"><img src="img/icon/property.svg" alt="" title="" /><span>Properties</span></a></li>
+				<li><a href="more-list.html"><br><img src="img/icon/more.svg" alt="" title="" /><span>More</span></a></li>
 			</ul>
 		</nav>
 	</div>
@@ -321,5 +320,4 @@
 
 </body>
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:45:28 GMT -->
 </html>
