--- a/about-us.html
+++ b/about-us.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:46:11 GMT -->
 <head>
 	<meta charset="UTF-8">
-	<title>BAITUN - Real Estate Mobile Template</title>
+	<title>ApinamDubai</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -46,67 +45,32 @@
 	<div class="side-nav-panel-left">
 		<ul id="slide-out-left" class="side-nav side-nav-panel collapsible">
 			<li class="profil">
-				<img src="img/profile.jpg" alt="">
-				<h2>John Doe</h2>
-				<h6>Mobile Developer</h6>
+				<img src="img/logowhite.png" alt="">
 			</li>
 			<li class="li-top">
-				<div class="collapsible-header"><i class="fa fa-home"></i>Home <span><i class="fa fa-caret-down"></i></span></div>
+				<div class="collapsible-header"><i class="fa fa-home"></i><a href="index.html">Home</a></div>
+			</li>
+			<li class="li-category">
+				<div class="collapsible-header"><i class="fa fa-th-large"></i>Categories <span><i class="fa fa-caret-down"></i></span></div>
 				<div class="collapsible-body">
 					<ul class="side-nav-panel">
-						<li><a href="index-2.html">Home v1</a></li>
-						<li><a href="index2.html">Home v2</a></li>
-						<li><a href="index3.html">Home v3</a></li>
-						<li><a href="index4.html">Home v4</a></li>
+						<li><a href="ads-list.html">Ads</a></li>
+						<li><a href="restaurant-list.html">Restaurant</a></li>
+						<li><a href="cargo-list.html">Cargo</a></li>
+						<li><a href="salon-list.html">Salon</a></li>
+						<li><a href="grocery-list.html">Grocery</a></li>
+						<li><a href="medical-list.html">Medical</a></li>
+						<li><a href="jobs-list.html">Jobs</a></li>
+						<li><a href="property-list.html">Properties</a></li>
+						<li><a href="more-list.html">More</a></li>
 					</ul>
 				</div>
 			</li>
-			<li>
-				<div class="collapsible-header"><i class="fa fa-th-list"></i>Properties List <span><i class="fa fa-caret-down"></i></span></div>
-				<div class="collapsible-body">
-					<ul class="side-nav-panel">
-						<li><a href="list-grid.html">List Grid</a></li>
-						<li><a href="list-list.html">List List</a></li>
-						<li><a href="list-full.html">List Full</a></li>
-					</ul>
-				</div>
+			<li class="li-top">
+				<div class="collapsible-header"><i class="fa fa-bell"></i><a href="blog.html">News</a></div>
 			</li>
-			<li>
-				<div class="collapsible-header"><i class="fa fa-th-large"></i>Properties Details <span><i class="fa fa-caret-down"></i></span></div>
-				<div class="collapsible-body">
-					<ul class="side-nav-panel">
-						<li><a href="single.html">Details v1</a></li>
-						<li><a href="single2.html">Details v2</a></li>
-						<li><a href="single3.html">Details v3</a></li>
-						<li><a href="single4.html">Details v4</a></li>
-					</ul>
-				</div>
-			</li>
-			<li>
-				<div class="collapsible-header"><i class="fa fa-file-o"></i>Pages <span><i class="fa fa-caret-down"></i></span></div>
-				<div class="collapsible-body">
-					<ul class="side-nav-panel">
-						<li><a href="agent.html">Agent</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li><a href="error404.html">404</a></li>
-						<li><a href="testimonial.html">Testimonial</a></li>
-					</ul>
-				</div>
-			</li>
-			<li>
-				<div class="collapsible-header"><i class="fa fa-bold"></i>Blog <span><i class="fa fa-caret-down"></i></span></div>
-				<div class="collapsible-body">
-					<ul class="side-nav-panel">
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="blog-single.html">Blog Single</a></li>
-					</ul>
-				</div>
-			</li>
-			<li><a href="about-us.html"><i class="fa fa-user"></i>About Us</a></li>
+			<li class="li-category"><a href="about-us.html"><i class="fa fa-user"></i>About Us</a></li>
 			<li><a href="contact.html"><i class="fa fa-envelope-o"></i>Contact Us</a></li>
-			<li><a href="login.html"><i class="fa fa-sign-in"></i>Login</a></li>
-			<li><a href="register.html"><i class="fa fa-user-plus"></i>Register</a></li>
 		</ul>
 	</div>
 	<!-- end side nav left-->
@@ -155,5 +119,4 @@
 
 </body>
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:46:15 GMT -->
 </html>
