--- a/single.html
+++ b/single.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:45:48 GMT -->
 <head>
 	<meta charset="UTF-8">
-	<title>BAITUN - Real Estate Mobile Template</title>
+	<title>ApinamDubai</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -31,7 +30,7 @@
 		<div class="side-nav-panel-left">
 			<!-- site brand	 -->
 			<div class="site-brand">
-				<a href="blog.html"><h1><span><i class="fa fa-angle-left"></i></span><img class="logo" src="img/logo.png" width="170px"></h1></a>
+				<a href="ads-list.html"><h1><span><i class="fa fa-angle-left"></i></span><img class="logo" src="img/logo.png" width="170px"></h1></a>
 			</div>
 			<!-- end site brand	 -->
 		</div>
@@ -55,15 +54,15 @@
 				<div class="collapsible-header"><i class="fa fa-th-large"></i>Categories <span><i class="fa fa-caret-down"></i></span></div>
 				<div class="collapsible-body">
 					<ul class="side-nav-panel">
-						<li><a href="#">Ads</a></li>
-						<li><a href="#">Restaurant</a></li>
-						<li><a href="#">Cargo</a></li>
-						<li><a href="#">Salon</a></li>
-						<li><a href="#">Grocery</a></li>
-						<li><a href="#">Medical</a></li>
-						<li><a href="#">Jobs</a></li>
-						<li><a href="#">Properties</a></li>
-						<li><a href="#">More</a></li>
+						<li><a href="ads-list.html">Ads</a></li>
+						<li><a href="restaurant-list.html">Restaurant</a></li>
+						<li><a href="cargo-list.html">Cargo</a></li>
+						<li><a href="salon-list.html">Salon</a></li>
+						<li><a href="grocery-list.html">Grocery</a></li>
+						<li><a href="medical-list.html">Medical</a></li>
+						<li><a href="jobs-list.html">Jobs</a></li>
+						<li><a href="property-list.html">Properties</a></li>
+						<li><a href="more-list.html">More</a></li>
 					</ul>
 				</div>
 			</li>
@@ -170,5 +169,4 @@
 
 </body>
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:45:48 GMT -->
 </html>
