--- a/testimonial.html
+++ b/testimonial.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/testimonial.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:46:06 GMT -->
 <head>
 	<meta charset="UTF-8">
-	<title>BAITUN - Real Estate Mobile Template</title>
+	<title>ApinamDubai</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -168,7 +167,6 @@
 
 </body>
 
-<!-- Mirrored from ngetemplates.com/baitun/baitun/testimonial.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 28 May 2021 09:46:07 GMT -->
 </html>
 
 
